# IVector

./: .gitignore  CMakeLists.txt  DESCRIPTION.md
include/: IBroker.h  ICompact.h  ILogger.h  IMultiIndex.h  ISet.h  IVector.h
src/: LibUtils.h  LogProducer.tpp  LogUtils.cpp  LogUtils.h  Logger.cpp  LoggerImpl.cpp  LoggerImpl.h  Set.cpp  Set.h  SetControlBlock.cpp  SetControlBlock.h  SetImpl.cpp  SetImpl.h  SetIterator.cpp  Vector.cpp  Vector.h  VectorImpl.cpp  VectorImpl.h  main.cpp
src/Compact/: CMakeLists.txt  Compact.cpp  Compact.h  CompactControlBlock.cpp  CompactControlBlock.h  CompactIterator.cpp  MultiIndex.cpp  MultiIndex.h
src/Logger/: CMakeLists.txt  Logger.h
src/Problem/: Broker.cpp  Broker.h  CMakeLists.txt  DiffProblem.cpp  DiffProblem.h  Problem.cpp  Problem.h
src/Set/: CMakeLists.txt  Set.cpp  Set.h  SetControlBlock.h  SetIterator.cpp
src/Solver/: Broker.cpp  CMakeLists.txt  Solver.cpp  Solver.h
src/Utils/: CMakeLists.txt  LogProducer.h  LogUtils.cpp  LogUtils.h  LogUtils.tpp  VectorUtils.cpp  VectorUtils.h
src/Vector/: CMakeLists.txt  Vector.cpp  Vector.h
tests/: CMakeLists.txt  main.cpp
tests/LibTests/: CompactTest.cpp  ProblemTest.cpp  SetTest.cpp  SolverTest.cpp  Tests.h  VectorTest.cpp
tests/TestUtils/: DllLoader.cpp  DllLoader.h  PrintUtils.cpp  PrintUtils.h
